Trying to fix iphone blurred hero back

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1461,7 +1461,7 @@ section {
 }
 
 .bg-parallax {
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
 }
 
 .bg-ytvideo.bg-overlay:before {
